# NewsAggregate

./: LICENSE  README.md  pyproject.toml
apps/parse_app/: admin.py  apps.py  models.py  urls.py  views.py
apps/parse_app/migrations/: 0001_initial.py  0002_alter_parsedata_img_link.py  0003_parsedata_site_name.py
core/: settings.py  urls.py
parsers/: dto.py  habr_parser.py  it_proger_parser.py  tproger_parser.py
repository/: parser_app_repository.py
templates/parse_app/: base.html  habr.html  itproger.html  navbar.html  news.html  tproger.html
