[tool.poetry]
name = "newsaggragate"
version = "0.1.0"
description = "Аггрегатор новостей"
authors = ["vyacheslav.v <vyacheslav.v@itfox-web.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
requests = "^2.28.1"
autopep8 = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
